--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src/ --extensions '.ts,.tsx' --out-dir dist/",
+    "start": "node dist/index.js",
     "lint": "eslint 'src/**'",
     "lint:fix": "npm run lint -- --fix",
     "lint:all": "eslint '**'",
@@ -22,11 +23,16 @@
     "type-check": "tsc",
     "type-check:watch": "tsc --watch"
   },
+  "dependencies": {
+    "@octokit/rest": "17.2.0",
+    "btoa": "1.2.1"
+  },
   "devDependencies": {
     "@babel/cli": "7.8.4",
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.5",
     "@babel/preset-typescript": "7.9.0",
+    "@types/btoa": "1.2.3",
     "@types/node": "13.11.1",
     "@typescript-eslint/parser": "2.27.0",
     "eslint": "6.8.0",
