--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@octokit/rest": "17.2.0",
-    "btoa": "1.2.1"
+    "btoa": "1.2.1",
+    "envalid": "6.0.1"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
