--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "node dist/index.js",
     "lint": "eslint 'src/**'",
     "lint:fix": "npm run lint -- --fix",
-    "lint:all": "eslint '**'",
+    "lint:all": "eslint '**' && prettier --check **/*.yaml",
     "lint:staged": "lint-staged",
     "type-check": "tsc",
     "type-check:watch": "tsc --watch"
