--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src/ --extensions '.ts,.tsx' --out-dir dist/",
+    "build": "webpack --env production",
+    "build:babel": "babel src/ --extensions '.ts,.tsx' --out-dir dist/",
     "start": "node dist/index.js",
     "lint": "eslint 'src/**'",
     "lint:fix": "npm run lint -- --fix",
@@ -36,6 +37,7 @@
     "@types/btoa": "1.2.3",
     "@types/node": "13.11.1",
     "@typescript-eslint/parser": "2.27.0",
+    "babel-loader": "8.1.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-import": "2.20.2",
@@ -47,7 +49,9 @@
     "lint-staged": "10.1.3",
     "prettier": "2.0.4",
     "ts-node": "8.8.2",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "webpack": "4.42.1",
+    "webpack-cli": "3.3.11"
   },
   "husky": {
     "hooks": {
