--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "type-check:watch": "tsc --watch"
   },
   "dependencies": {
-    "@octokit/rest": "17.2.0",
+    "@actions/github": "2.1.1",
     "btoa": "1.2.1",
     "envalid": "6.0.1"
   },
