--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "engines": {
     "node": "13.12.0"
   },
-  "main": "dist/index.js",
   "scripts": {
     "build": "webpack --env production",
-    "build:babel": "babel src/ --extensions '.ts,.tsx' --out-dir dist/",
-    "start": "node dist/index.js",
+    "build:dist": "npm run build && rm -rf dist/ && cp -r build/ dist/",
+    "start": "node build/index.js",
+    "start:dist": "node dist/index.js",
     "lint": "eslint 'src/**'",
     "lint:fix": "npm run lint -- --fix",
     "lint:all": "eslint '**' && prettier --check **/*.yaml",
     "lint:staged": "lint-staged",
     "type-check": "tsc",
-    "type-check:watch": "tsc --watch"
+    "type-check:watch": "tsc --watch",
+    "dist-check": "npm run build && diff -s build/ dist/"
   },
   "dependencies": {
     "@octokit/rest": "17.2.0",
