--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dist-check": "npm run build && diff -s build/ dist/"
   },
   "dependencies": {
+    "@actions/core": "1.2.3",
     "@octokit/rest": "17.2.0",
     "btoa": "1.2.1",
     "envalid": "6.0.1"
