--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@actions/core": "1.2.3",
     "@octokit/rest": "17.2.0",
     "btoa": "1.2.1",
-    "envalid": "6.0.1"
+    "env-var": "6.0.4"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
