--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,53 @@
 name: Update Lock File Action
-description: An action for updating package-lock.json and yarn.lock files.
+description: A GitHub action for updating lock files.
+inputs:
+  token:
+    description: A token for committing the updated lock file and creating the pull request.
+    required: true
+  branch:
+    description: A custom branch name.
+    required: false
+    default: update-lock-file
+  commit-message:
+    description: A custom commit message.
+    required: false
+    default: Update lock file
+  commit-token:
+    description: A token that will be used to commit the lock file instead of `token`.
+    required: false
+    default: ''
+  title:
+    description: A custom pull request title.
+    required: false
+    default: ''
+  body:
+    description: A custom pull request body.
+    required: false
+    default: ''
+  labels:
+    description: A comma-separated list of labels.
+    required: false
+    default: ''
+  assignees:
+    description: A comma-separated list of assignees.
+    required: false
+    default: ''
+  reviewers:
+    description: A comma-separated list of reviewers.
+    required: false
+    default: ''
+  team-reviewers:
+    description: A comma-separated list of team reviewers.
+    required: false
+    default: ''
+  milestone:
+    description: A milestone number.
+    required: false
+    default: ''
+  draft:
+    description: A flag to create a pull request draft or a regular pull request.
+    required: false
+    default: false
 runs:
   using: node12
   main: dist/index.js
