--- a/.github/workflows/approve-pr.yaml
+++ b/.github/workflows/approve-pr.yaml
@@ -25,3 +25,15 @@ jobs:
         uses: hmarr/auto-approve-action@v2.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  lock-file:
+    name: Updated lock file
+    runs-on: ubuntu-latest
+    if: >-
+      github.event.pull_request.user.login == 'branoholy-bot' &&
+      github.head_ref == 'deps-update-lock-file'
+    steps:
+      - name: Approve pull request
+        uses: hmarr/auto-approve-action@v2.0.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
