--- a/.github/workflows/approve-pr.yaml
+++ b/.github/workflows/approve-pr.yaml
@@ -3,7 +3,7 @@ name: Approve PR
 on: pull_request
 
 jobs:
-  dependabot:
+  approve-dependabot:
     name: Dependabot dependencies
     runs-on: ubuntu-latest
     if: >-
@@ -26,12 +26,24 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-  lock-file:
+  approve-lock-file:
     name: Updated lock file
     runs-on: ubuntu-latest
     if: >-
       github.event.pull_request.user.login == 'branoholy-bot' &&
       github.head_ref == 'deps-update-lock-file'
+    steps:
+      - name: Approve pull request
+        uses: hmarr/auto-approve-action@v2.0.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  approve-dist:
+    name: Updated dist
+    runs-on: ubuntu-latest
+    if: >-
+      github.event.pull_request.user.login == 'branoholy-bot' &&
+      github.head_ref == 'build-update-dist'
     steps:
       - name: Approve pull request
         uses: hmarr/auto-approve-action@v2.0.0
