--- a/.github/workflows/update-dist.yaml
+++ b/.github/workflows/update-dist.yaml
@@ -1,13 +1,12 @@
-name: Update lock file
+name: Update dist
 
 on:
   push:
     branches: develop
-    paths: package-lock.json
 
 jobs:
-  update-lock-file:
-    name: Update lock file
+  update-dist:
+    name: Update dist
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,15 +15,14 @@ jobs:
         uses: actions/setup-node@v1.4.0
         with:
           node-version: 13.12.0
-      - name: Update lock file
+      - name: Update dist
         uses: branoholy/update-files-action@develop
         with:
           token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
-          commands: 'npm i, npm run build:dist'
-          paths: 'package-lock.json, dist/index.js'
-          branch: deps-update-lock-file
-          commit-message: 'DEPS: Update lock file'
+          commands: 'npm run build:dist'
+          paths: dist/index.js
+          branch: build-update-dist
+          commit-message: 'BUILD: Update dist'
           commit-token: ${{ secrets.GITHUB_TOKEN }}
-          body: Automatic update of dependencies in `package-lock.json`.
-          labels: dependencies
+          body: Automatic update of `dist/index.js`.
           reviewers: branoholy
