FEATURE #38: Add jest, stryker, and unit tests

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "type-check": "tsc",
     "type-check:watch": "tsc --watch",
     "node-versions-check": "babel-node --extensions '.ts' scripts/check-node-versions.ts",
-    "node-versions-update": "babel-node --extensions '.ts' scripts/update-node-versions.ts"
+    "node-versions-update": "babel-node --extensions '.ts' scripts/update-node-versions.ts",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "stryker": "stryker run"
   },
   "dependencies": {
     "@actions/core": "1.2.4",
@@ -38,21 +42,28 @@
     "@babel/node": "7.10.1",
     "@babel/preset-env": "7.10.1",
     "@babel/preset-typescript": "7.10.1",
+    "@stryker-mutator/core": "3.2.4",
+    "@stryker-mutator/jest-runner": "3.2.4",
+    "@stryker-mutator/typescript": "3.2.4",
     "@types/btoa": "1.2.3",
     "@types/diff": "4.0.2",
+    "@types/jest": "25.2.3",
     "@types/node": "14.0.5",
     "@types/node-fetch": "2.5.7",
     "@typescript-eslint/parser": "3.0.2",
+    "babel-jest": "26.0.1",
     "babel-loader": "8.1.0",
     "diff": "4.0.2",
     "eslint": "7.1.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "23.13.2",
     "eslint-plugin-json": "2.1.1",
     "eslint-plugin-markdown": "1.0.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-simple-import-sort": "5.0.3",
     "husky": "4.2.5",
+    "jest": "26.0.1",
     "lint-staged": "10.2.6",
     "node-fetch": "2.6.0",
     "prettier": "2.0.5",
