--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,6 +65,28 @@ jobs:
         env:
           CI: true
 
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.1.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v1.4.0
+        with:
+          node-version: 14.3.0
+      - name: Cache or restore dependencies
+        id: cache-dependencies
+        uses: actions/cache@v1.1.2
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Test
+        run: npm run test
+        env:
+          CI: true
+
   type-check:
     name: Check types
     runs-on: ubuntu-latest
@@ -134,6 +156,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+      - test
       - type-check
       - lint
       - check-node-versions
