--- a/.github/workflows/merge-pr.yaml
+++ b/.github/workflows/merge-pr.yaml
@@ -6,22 +6,24 @@ on:
   status: {}
 
 jobs:
-  merge-dependabot:
-    name: Merge Dependabot dependencies
+  merge-pr:
+    name: "Merge bot's PR"
     runs-on: ubuntu-latest
     if: >-
       (
         github.event_name == 'pull_request_review' &&
         (
           github.event.pull_request.user.login == 'dependabot[bot]' ||
-          github.event.pull_request.user.login == 'dependabot-preview[bot]'
+          github.event.pull_request.user.login == 'dependabot-preview[bot]' ||
+          github.event.pull_request.user.login == 'branoholy-bot'
         )
       ) ||
       (
         github.event_name == 'status' &&
         (
           github.event.commit.author.login == 'dependabot[bot]' ||
-          github.event.commit.author.login == 'dependabot-preview[bot]'
+          github.event.commit.author.login == 'dependabot-preview[bot]' ||
+          github.event.commit.author.login == 'branoholy-bot'
         )
       )
     steps:
@@ -29,48 +31,6 @@ jobs:
         uses: pascalgn/automerge-action@v0.8.0
         env:
           MERGE_LABELS: ''
-          UPDATE_LABELS: 'autorebase'
-          UPDATE_METHOD: rebase
-          GITHUB_TOKEN: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
-
-  merge-lock-file:
-    name: Merge updated lock file
-    runs-on: ubuntu-latest
-    if: >-
-      (
-        github.event_name == 'pull_request_review' &&
-        github.event.pull_request.user.login == 'branoholy-bot'
-      ) ||
-      (
-        github.event_name == 'status' &&
-        contains(github.event.branches.*.name, 'deps-update-lock-file')
-      )
-    steps:
-      - name: Merge pull request
-        uses: pascalgn/automerge-action@v0.8.0
-        env:
-          MERGE_LABELS: ''
-          UPDATE_LABELS: 'autorebase'
-          UPDATE_METHOD: rebase
-          GITHUB_TOKEN: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
-
-  merge-dist:
-    name: Merge updated dist
-    runs-on: ubuntu-latest
-    if: >-
-      (
-        github.event_name == 'pull_request_review' &&
-        github.event.pull_request.user.login == 'branoholy-bot'
-      ) ||
-      (
-        github.event_name == 'status' &&
-        contains(github.event.branches.*.name, 'build-update-dist')
-      )
-    steps:
-      - name: Merge pull request
-        uses: pascalgn/automerge-action@v0.8.0
-        env:
-          MERGE_LABELS: ''
-          UPDATE_LABELS: 'autorebase'
+          UPDATE_LABELS: autorebase
           UPDATE_METHOD: rebase
           GITHUB_TOKEN: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
