--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,18 @@
 name: CI
 
-on: push
+on: [push, pull_request]
 
 jobs:
   install:
     name: Install dependencies
     runs-on: ubuntu-latest
+    if: >-
+      github.event_name == 'push' ||
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.user.login == 'branoholy-bot' &&
+        (github.head_ref == 'deps-update-lock-file' || github.head_ref == 'build-update-dist')
+      )
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
