--- a/.github/workflows/update-lock-file.yaml
+++ b/.github/workflows/update-lock-file.yaml
@@ -24,6 +24,7 @@ jobs:
           paths: package-lock.json
           branch: deps-update-lock-file
           commit-message: 'DEPS: Update lock file'
+          commit-token: ${{ secrets.GITHUB_TOKEN }}
           body: Automatic update of dependencies in `package-lock.json`.
           labels: dependencies
           reviewers: branoholy
