--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,8 +10,7 @@ jobs:
       github.event_name == 'push' ||
       (
         github.event_name == 'pull_request' &&
-        github.event.pull_request.user.login == 'branoholy-bot' &&
-        (github.head_ref == 'deps-update-lock-file' || github.head_ref == 'build-update-dist')
+        github.event.pull_request.user.login == 'branoholy-bot'
       )
     steps:
       - name: Checkout
@@ -96,10 +95,34 @@ jobs:
         env:
           CI: true
 
+  check-node-versions:
+    name: Check Node.js versions
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.1.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v1.4.0
+        with:
+          node-version: 13.12.0
+      - name: Cache or restore dependencies
+        id: cache-dependencies
+        uses: actions/cache@v1.1.2
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Check Node.js versions
+        run: npm run node-versions-check
+
   send-ci-status-summary:
     name: Send CI status summary
     runs-on: ubuntu-latest
-    needs: [build, type-check, lint]
+    needs:
+      - build
+      - type-check
+      - lint
+      - check-node-versions
     steps:
       - name: Send CI status summary
         run: >-
