--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "baseUrl": "src/"
   },
   "exclude": ["node_modules"]
