--- a/action.yaml
+++ b/action.yaml
@@ -8,7 +8,7 @@ inputs:
     description: A comma-separated list of commands to generate the files specified in `paths`.
     required: true
   paths:
-    description: A comma-separated list of paths to delete and commit if they were changed.
+    description: A comma-separated list of paths to commit if they were changed.
     required: true
   branch:
     description: A custom branch name.
