--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,6 +133,35 @@ jobs:
         env:
           CI: true
 
+  code-ql:
+    name: CodeQL
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.1
+        with:
+          fetch-depth: 2
+      - name: Checkout the latest non-merge commit
+        run: git checkout HEAD^2
+        if: github.event_name == 'pull_request'
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.0
+        with:
+          node-version: 14.5.0
+      - name: Cache or restore dependencies
+        id: cache-dependencies
+        uses: actions/cache@v2.0.0
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          languages: javascript
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v1
+
   check-node-versions:
     name: Check Node.js versions
     runs-on: ubuntu-latest
@@ -161,6 +190,7 @@ jobs:
       - test
       - type-check
       - lint
+      - code-ql
       - check-node-versions
     steps:
       - name: Send CI status summary
