--- a/.github/workflows/approve-pr.yaml
+++ b/.github/workflows/approve-pr.yaml
@@ -28,15 +28,18 @@
 # webpack-
 #   webpack, webpack-cli (build)
 #
-# Approved GitHub Actions
-# -----------------------
-# actions/checkout
-# actions/setup-node
-#
 # Other dependencies
 # ------------------
 # @actions/core, @octokit/rest, btoa, envalid
 # diff, husky, lint-staged, node-fetch
+#
+# Approved GitHub Actions
+# -----------------------
+# actions-checkout-
+#   actions/checkout
+#
+# actions-setup-node-
+#   actions/setup-node
 #
 # Other GitHub Actions
 # --------------------
@@ -48,32 +51,38 @@ name: Approve PR
 on: pull_request
 
 jobs:
-  approve-bots-pr:
-    name: "Approve bot's PR"
+  approve-dependabots-pr:
+    name: "Approve Dependabot's PR"
     runs-on: ubuntu-latest
     if: >-
+      github.event.pull_request.user.login == 'dependabot[bot]' &&
       (
-        github.event.pull_request.user.login == 'dependabot[bot]' &&
-        (
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-babel-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-eslint-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-jest-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-prettier-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-types-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-typescript-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-typescript-eslint-parser-') ||
-          startsWith(github.head_ref, 'dependabot-npm_and_yarn-webpack-') ||
-          startsWith(github.head_ref, 'dependabot-github_actions-actions-checkout-') ||
-          startsWith(github.head_ref, 'dependabot-github_actions-actions-setup-node-')
-        )
-      ) ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-babel-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-eslint-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-jest-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-prettier-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-types-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-typescript-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-typescript-eslint-parser-') ||
+        startsWith(github.head_ref, 'dependabot-npm_and_yarn-webpack-') ||
+        startsWith(github.head_ref, 'dependabot-github_actions-actions-checkout-') ||
+        startsWith(github.head_ref, 'dependabot-github_actions-actions-setup-node-')
+      )
+    steps:
+      - name: Approve pull request
+        uses: hmarr/auto-approve-action@v2.0.0
+        with:
+          github-token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
+
+  approve-other-bots-pr:
+    name: "Approve other bots' PR"
+    runs-on: ubuntu-latest
+    if: >-
+      github.event.pull_request.user.login == 'branoholy-bot' &&
       (
-        github.event.pull_request.user.login == 'branoholy-bot' &&
-        (
-          github.head_ref == 'deps-update-lock-file' ||
-          github.head_ref == 'deps-update-node' ||
-          github.head_ref == 'build-update-dist'
-        )
+        github.head_ref == 'deps-update-lock-file' ||
+        github.head_ref == 'deps-update-node' ||
+        github.head_ref == 'build-update-dist'
       )
     steps:
       - name: Approve pull request
