--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "stryker": "stryker run"
+    "stryker": "stryker run",
+    "postinstall": "git config --local core.hooksPath hooks"
   },
   "dependencies": {
     "@actions/core": "1.2.6",
@@ -62,7 +63,6 @@
     "eslint-plugin-markdown": "1.0.2",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-simple-import-sort": "5.0.3",
-    "husky": "4.3.0",
     "jest": "26.6.1",
     "lint-staged": "10.5.0",
     "node-fetch": "2.6.1",
@@ -70,12 +70,5 @@
     "typescript": "4.0.5",
     "webpack": "5.3.2",
     "webpack-cli": "4.1.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "post-commit": "rm -f .lint-staged-temp-tsconfig.json",
-      "prepare-commit-msg": "babel-node --extensions '.ts' hooks/prepare-commit-msg.ts $HUSKY_GIT_PARAMS"
-    }
   }
 }
