--- a/.github/workflows/assign-pr-author.yaml
+++ b/.github/workflows/assign-pr-author.yaml
@@ -8,8 +8,9 @@ jobs:
   assign-author:
     name: Assign PR author
     runs-on: ubuntu-latest
+    if: github.event.pull_request.user.login != 'dependabot[bot]'
     steps:
-      - name: Set assignee
+      - name: Add an assignee
         uses: technote-space/assign-author@v1.5.3
         with:
           GITHUB_TOKEN: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
