--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -182,6 +182,22 @@ jobs:
       - name: Check Node.js versions
         run: npm run node-versions-check
 
+  check-lock-file-version:
+    name: Check lock file version
+    runs-on: ubuntu-latest
+    if: >-
+      github.event_name == 'push' ||
+      (
+        github.event_name == 'pull_request' &&
+        github.event.pull_request.user.login == 'branoholy-bot'
+      )
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+      - name: Check lock file version
+        run: >-
+          grep '"lockfileVersion": 2' package-lock.json
+
   send-ci-status-summary:
     name: Send CI status summary
     runs-on: ubuntu-latest
@@ -192,6 +208,7 @@ jobs:
       - lint
       - code-ql
       - check-node-versions
+      - check-lock-file-version
     steps:
       - name: Send CI status summary
         run: >-
