FEATURE #620: Commit to an existing branch and PR

--- a/.github/workflows/update-lock-file.yaml
+++ b/.github/workflows/update-lock-file.yaml
@@ -23,6 +23,7 @@ jobs:
           commands: 'rm package-lock.json, npm i'
           paths: package-lock.json
           branch: deps-update-lock-file
+          delete-branch: true
           commit-message: 'DEPS: Update lock file'
           commit-token: ${{ secrets.GITHUB_TOKEN }}
           body: Automatic update of dependencies in `package-lock.json`.
